Minor Hover Updates

--- a/css/custom.css
+++ b/css/custom.css
@@ -135,6 +135,9 @@ html, body {
     font-weight: 300;
     text-align: center;
 }
+.navbar-expand-md .navbar-nav .nav-link:hover {
+    text-decoration: underline;
+}
 .heroSectionContent h1 {
     font-size: 90px;
     font-weight: 700;
@@ -178,6 +181,7 @@ html, body {
   background: -webkit-linear-gradient(left, #e6384d 0%,#f06b38 50%); /* Chrome10-25,Safari5.1-6 */
   background: linear-gradient(to right, #e6384d 0%,#f06b38 50%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e6384d', endColorstr='#f06b38',GradientType=1 ); /* IE6-9 */
+  box-shadow: 10px 10px 20px rgba(0,0,0,0.2);
 }
 
 .heroHightlights {
@@ -286,6 +290,12 @@ button.navbar-toggler {
   display: block;
   font-family: 'gilroy-bold', Montserrat, sans-serif;
 }
+
+.sectionSeeMore:hover {
+    color: #47164f;
+    text-decoration: underline;
+}
+
 .sectionSub {
   max-width: 300px;
 }
@@ -510,6 +520,9 @@ h4.section-5-slideName {
     font-size: 35px;
     color: #d0cfcb;
 }
+.section-5-slideSocial li a:hover {
+    color: #969191;
+}
 /*.slick-list {
     z-index: -1;
 }*/
@@ -527,8 +540,14 @@ h4.section-5-slideName {
     box-shadow: 20px 20px 50px rgba(0,0,0,0.1);
     cursor: pointer;
     z-index: 200px;
+  -webkit-transition: all 200ms ease-out 0s;
+   -moz-transition: all 200ms ease-out 0s;
+   -o-transition: all 200ms ease-out 0s;
+    transition: all 200ms ease-out 0s;  
 }
-
+.section-5-slides .slick-arrow:hover, .roadmapTimeline .slick-arrow:hover {
+    box-shadow: 10px 10px 30px rgba(0,0,0,0.2);
+}
 .section-5-slides {
     position: relative;
 }
@@ -795,6 +814,10 @@ h4.section-5-slideName {
   font-size: 14px;
   cursor: pointer;
 }
+.btn_trans:hover {
+    background: transparent;
+    box-shadow: 10px 10px 20px rgba(0,0,0,0.1);
+}
 .section-8-content {
     padding: 100px 0 0px;
 }
@@ -846,7 +869,7 @@ h4.section-5-slideName {
     padding-bottom: 15px;
 }
 .sectioncarousel {
-    padding: 100px 0 30px;
+    padding: 100px 0 100px;
 }
 .sectioncarousel .carousel-indicators {
     position: relative;
@@ -1015,10 +1038,10 @@ footer{
   padding-right: 10px;
   padding-bottom: 10px;
 }
-.footSection a{
+.footSection a, .footerLogo a{
   color: #fff;
 }
-.footSection a:hover{
+.footSection a:hover, .footerLogo a:hover{
   color: #fff;
   text-decoration: underline;
 }
@@ -1286,3 +1309,10 @@ footer{
  transform: translateX(0);
  transform: translate3d(0, 0, 0);
 }
+
+
+
+
+
+
+
